--- a/Kalkulaator_Tartu/Kalkulaator_Tartu.vcxproj.filters
+++ b/Kalkulaator_Tartu/Kalkulaator_Tartu.vcxproj.filters
@@ -57,5 +57,8 @@
     <EmbeddedResource Include="Trapets.resx">
       <Filter>Resource Files</Filter>
     </EmbeddedResource>
+    <EmbeddedResource Include="Ring.resx">
+      <Filter>Resource Files</Filter>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
